# Inf8

./: .gitignore  CMakeLists.txt  README.md  clear.sh  inf8.c
arcanoid/: CMakeLists.txt  arcanoid.c
include/: inf8.h  stack.h  types.h
src/: inf8.c  stack.c
